docs(spec): staging 设计 v2，吸收 codex 审查意见重写
codex 审查结论"需重大返工"，指出的技术硬伤全部修正：

- Nginx 硬编码域名：改为 staging overlay + staging.conf.template（变量化），
  不动 single-host.yml（不影响生产 175）
- "不改 Compose"矛盾：改为显式新增 staging overlay，覆盖 app env/
  nginx volume/mysql command
- 证书鸡生蛋：明确 certbot standalone 或 DNS-01，含续期 hook
- Redis 恢复错误：Redis 7 appendonlydir+manifest，改为停服+清空+
  RDB 恢复+重建 AOF
- MeiliSearch 恢复错误：改为 --import-snapshot 启动导入
- MySQL dump 参数不全：补 --routines --events --triggers --no-tablespaces
- 数据不一致：明确最终一致等级 + 同步前停 app
- Redis 含 session 风险：记录并在 spec 标注可选缓解
- 任意 ref 安全：限制为 main/Tag，不直接接受裸 SHA
- NFS 拆除不全：补 Docker systemd drop-in 清理 + 175 export 收敛
- 首次初始化顺序：先起数据服务→灌数据→再起 app
- staging 回滚非无风险：定义为完整重灌流程
- 验收可执行：行数/校验/文档数/AOF 残留/cron dry-run 等

Co-Authored-By: Claude <noreply@anthropic.com>